material-ui setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "next-materialui",
   "version": "0.1.0",
+  "author": "pratik kajare",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
